# CodeAnnotation

./: pyproject.toml
code_annotation/: __init__.py  __main__.py  _comparison.py  _document.py
