[project]
name = "code_annotation"
version = "1.0.0"
description = "A Python library for annotating and formatting Python code."
authors = [{name = "Leonardo Mieschendahl", email = "miesschendahl.leonardo@gmail.com"}]
dependencies = [
    "openai >= 1.106.0, < 2.0.0",
    "easy_prompting @ git+https://github.com/TheoreticalCoder/EasyPrompting.git@v1.0.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["build", "dist", "dev.*"]